@@ -1,5 +1,7 @@
 2015-07-01  Charlie Zender  <zender@uci.edu>
 
+	* Diagnose problem (incorrect Tempest dst/src_grid_dims variable) and implement workaround
+
 	* Change ncol to col in code for symmetry with lat/lon
 
 2015-06-29  Charlie Zender  <zender@uci.edu>
